--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Avaliador de Disciplinas</title>
+    <title></title>
 </head>
 <body>
     <header>
     </header>
     <section>
         <div id='main'>
-            <h1>Disciplinas</h1>
+            <h1></h1>
             
         </div>
     </section>
