--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
                     <a href="">AJuDE</a>
                 </li>
                 <li> 
-                    <a href="#">criar conta</a> 
+                    <a href="#">campanhas</a> 
                 </li>
-    
+                <li> 
+                    <a href="#">criar conta</a>
+                </li>
+
                 <li> 
                     <a href="#">login</a>
                 </li>
