--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <header class="main-header">
         <nav id="navbar">
             <ul>
-
                 <li>
-                    <a href="">AJuDE</a>
+                    <a href="#">inicio</a>
                 </li>
                 <li> 
                     <a href="#">campanhas</a> 
@@ -23,11 +22,9 @@
                 <li> 
                     <a href="#">criar conta</a>
                 </li>
-
                 <li> 
                     <a href="#">login</a>
                 </li>
-    
                 <li>
                     <a href="#">lançar campanha</a>
                 </li>
@@ -52,11 +49,7 @@
         </div>
     </section>
 
-    <!-- CAMPANHAS ATIVAS -->
-    <section id="campaigns-section">
-
-    </section>
-
+    <!-- RODAPÉ -->
     <footer class="center-footer">
         <div class="sub-footer">
             <div id="text-footer">
