--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <nav id="navbar">
             <ul>
                 <li>
-                    <a href="#">inicio</a>
+                    <a href="index.html">inicio</a>
                 </li>
                 <li> 
-                    <a href="#">campanhas</a> 
+                    <a href="./pages/campaigns.html">campanhas</a> 
                 </li>
                 <li> 
                     <a href="./pages/register.html">criar conta</a>
                 </li>
                 <li> 
-                    <a href="#">login</a>
+                    <a href="./pages/login.html">login</a>
                 </li>
                 <li>
-                    <a href="#">lançar campanha</a>
+                    <a href="./pages/create-campaign.html">lançar campanha</a>
                 </li>
             </ul>
         </nav>
@@ -47,6 +47,11 @@
         <div id="launch-div">
             <button>Lance sua campanha</button>
         </div>
+    </section>
+
+    <!-- CAMPANHAS ATIVAS -->
+    <section>
+        
     </section>
 
     <!-- RODAPÉ -->
