--- a/pages/register.html
+++ b/pages/register.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../styles/register.css">
 </head>
 <body>
+    <!-- NAVBAR -->
     <header class="main-header">
         <nav id="navbar">
             <ul>
@@ -34,7 +35,8 @@
     <div id="aux-div">
         <br>
     </div>
-    <!-- WALLPAPER -->
+
+    <!-- FORMULÁRIO -->
     <section id="register-form-section">
         <div id="container-login">
             <h2>
