Add register page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="./pages/campaigns.html">campanhas</a> 
                 </li>
                 <li> 
-                    <a href="#">criar conta</a>
+                    <a href="./pages/register.html">criar conta</a>
                 </li>
                 <li> 
                     <a href="./pages/login.html">login</a>
