--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
                     <a href="index.html">inicio</a>
                 </li>
                 <li> 
-                    <a href="./pages/campaigns.html">campanhas</a> 
+                    <a href="./views/campaigns.html">campanhas</a> 
                 </li>
                 <li> 
-                    <a href="./pages/register.html">criar conta</a>
+                    <a href="./views/register.html">criar conta</a>
                 </li>
                 <li> 
-                    <a href="./pages/login.html">login</a>
+                    <a href="./views/login.html">login</a>
                 </li>
                 <li>
-                    <a href="./pages/create-campaign.html">lançar campanha</a>
+                    <a href="./views/create-campaign.html">lançar campanha</a>
                 </li>
             </ul>
         </nav>
